--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "mongoose": "^8.7.1",
     "next": "14.2.15",
     "pdf-parse": "^1.1.1",
