--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "mongoose": "^8.7.1",
     "next": "14.2.15",
     "pdf-parse": "^1.1.1",
