--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.15",
     "pdf-parse": "^1.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vercel": "^39.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
